--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>BUNBUN</title>
+  <title>BUNBUN TEAM</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="Welcome! 
-  Here is the website of the BUNBUN Group, we are a group of five people with no basic computer knowledge, 
-  but we are always curious, learning spirit and our own unique personality!
-   Let's always keep it warm!" content="Description">
+  <meta name="Welcome! Here is the website of the BUNBUN Group, we are a group of five people with no basic computer knowledge, but we are always curious, learning spirit and our own unique personality! Let's always keep it warm!" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
+  <link rel="stylesheet" href="custom.css">
 </head>
 <body>
   <div id="app"></div>
@@ -19,11 +18,9 @@
       repo: 'https://github.com/2022015544/2024ZWU-IS-8',
       loadSidebar: true,  //prepare for sidebar
       loadNavbar: true,   //prepare for navbar
-
     }
   </script>
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
-
 </body>
 </html>
