--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: 'Project theme',
+      name: 'BUNBUN TEAM',
       repo: 'https://github.com/2022015544/2024ZWU-IS-8',
       loadSidebar: true,  //prepare for sidebar
       loadNavbar: true,   //prepare for navbar
